// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Default 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="Default Switch"
  accessibilityRole="switch"
  accessibilityState={
    Object {
      "checked": undefined,
      "disabled": false,
    }
  }
  accessible={true}
  disabled={false}
  focusable={true}
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "flexDirection": "row-reverse",
      "minHeight": 28,
      "minWidth": 40,
      "padding": 6,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontFamily": "Segoe UI",
        "fontSize": 12,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    Default Switch
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row-reverse",
      }
    }
  >
    <View
      animationClass="Ribbon_SwitchBackground"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#616161",
          "borderRadius": 50,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 20,
          "justifyContent": "flex-start",
          "marginBottom": 2,
          "marginLeft": 4,
          "marginRight": 4,
          "marginTop": 2,
          "padding": 2,
          "width": 40,
        }
      }
    >
      <View
        animationClass="Ribbon_SwitchThumb"
        style={
          Object {
            "backgroundColor": "#616161",
            "borderRadius": 17,
            "height": 14,
            "width": 14,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Switch Disabled 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="Default Switch Disabled"
  accessibilityRole="switch"
  accessibilityState={
    Object {
      "checked": undefined,
      "disabled": true,
    }
  }
  accessible={true}
  disabled={true}
  focusable={false}
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "flexDirection": "row-reverse",
      "minHeight": 28,
      "minWidth": 40,
      "padding": 6,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontFamily": "Segoe UI",
        "fontSize": 12,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    Default Switch Disabled
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row-reverse",
      }
    }
  >
    <View
      animationClass="Ribbon_SwitchBackground"
      style={
        Object {
          "backgroundColor": "#f0f0f0",
          "borderColor": "#e0e0e0",
          "borderRadius": 50,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 20,
          "justifyContent": "flex-start",
          "marginBottom": 2,
          "marginLeft": 4,
          "marginRight": 4,
          "marginTop": 2,
          "padding": 2,
          "width": 40,
        }
      }
    >
      <View
        animationClass="Ribbon_SwitchThumb"
        style={
          Object {
            "backgroundColor": "#e0e0e0",
            "borderRadius": 17,
            "height": 14,
            "width": 14,
          }
        }
      />
    </View>
  </View>
</View>
`;
